package json updated

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NODE_ENV=dev
-REFRESH_TOKEN=1//04UhpcwVIP6KnCgYIARAAGAQSNwF-L9IrGflm6LrnSzCNuGS1ID4uasmIi8DXrRTr1PpnxG1Rjow0J2EgU1u3_ZLaKq8CVnBlCtE
+PORT=4000
