--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-jwt": "^6.1.0",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.3",
     "rootpath": "^0.1.2"
   }
 }
